--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link href="css/component_black.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/main.css"/>
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" /> 
 </head>
 <body ng-app="angula">
 <div ng-controller="ExampleController">
