--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="ANGULA">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#07ccd4">
 
     
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.css">
@@ -44,7 +45,8 @@
     <link href="css/component_black.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/main.css"/>
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" /> 
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <!--    <link rel="icon" sizes="192x192" href="nice-highres.png"> FAVICON FOR ANDROID MULTITASK-->
 </head>
 <body ng-app="angula">
 <div ng-controller="ExampleController">
@@ -60,7 +62,7 @@
 
 <div ng-include="template.url"></div><!--templates/footer_4.html--></div>
 <!-- Vendor: Javascripts -->
-
+<script src="js/pace.min.js" type="text/javascript"></script>
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
