--- a/index - Copy.html
+++ b/index - Copy.html
@@ -47,9 +47,6 @@
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!--    <link rel="icon" sizes="192x192" href="nice-highres.png"> FAVICON FOR ANDROID MULTITASK-->
-    <script>
-        
-    </script>
 </head>
 <body ng-app="angula">
 <div ng-controller="ExampleController">
@@ -115,12 +112,19 @@
 <!-- Our Website Javascripts -->
 
 <script src="js/controller.js" type="text/javascript"></script>
-<script src="js/ss.js" type="text/javascript"></script>
 
 <script>
     $("#btnlateral").click(function () {
         $(".box-lateral").animate({width: 'toggle' }); ;
     })
+</script>
+
+<script>
+	$(function() {
+		$.scrollify({
+			section : "section",
+		});
+	});
 </script>
 
 </body>
